--- a/2012/3papers/combined/combined_epl.tex
+++ b/2012/3papers/combined/combined_epl.tex
@@ -114,15 +114,9 @@ G.~Antchev\thanksInst{1}
 
 
 \abstract{%
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
-This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+The TOTEM experiment at the LHC has performed the first luminosity-independent determination of the total proton-proton cross-section at $\sqrt{s} = 7\un{TeV}$. This technique is based on the optical theorem and requires simultaneous measurements of the inelastic rate -- accomplished with the forward telescopes T1 and T2 in the range $5.3 < |\eta| < 6.4$ -- and of the elastic rate by detecting the outcoming protons with Roman Pot detectors. The data presented here were collected in a dedicated run in 2011 with special beam optics ($\beta^{*} = 90\un{m}$) and Roman Pots approaching the beam close enough to register elastic events with squared four-momentum transfers $|t|$ as low as $5 \cdot 10^{-3}\,\un{GeV^{2}}$. The luminosity-independent results for the elastic, inelastic and total cross-sections are $\sigma_{\rm el} = (25.1\pm 1.1)\un{mb}$, $\sigma_{\rm inel} = (72.9\pm 1.5)\un{mb}$ and $\sigma_{\rm tot} = (98.0\pm 2.5)\un{mb}$, respectively. At the same time this method delivers the integrated luminosity, in agreement with measurements by CMS.\\
+%
+TOTEM also exploited two complementary ways of determining the total cross-section, both using the CMS luminosity measurement as an input and thus having very different systematic dependences. All results are in excellent agreement, making a first estimate for the $\rho$ parameter at $\sqrt{s} = 7\,$TeV possible: $|\rho| = 0.145 \pm 0.091$.
 }
 
 
